# crosscloud-ml-orchestration

./: .gitignore  CLAUDE.md  CrossCloud_ML_ProjectSpec.docx  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/skills/: calibration-workflow.md  deployment-guide.md  entropy-debugging.md  testing-guide.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
airflow/: AGENTS.md
airflow/dags/: crosscloud_orchestration.py
analysis/: routing_regret.py
inference/: AGENTS.md  Dockerfile  __init__.py  config.py  models.py  server.py
router/: AGENTS.md  __init__.py  artifact.py  distillation.py  entropy.py  learned_router.py  router.py  temporal.py  threshold.py  types.py
telemetry/: AGENTS.md  bigquery_schema.json  sample_telemetry.py  tracing.py  writer.py
telemetry/benchmarks/: entropy_validity.py
tests/: AGENTS.md  conftest.py  test_config.py  test_dag.py  test_entropy.py  test_router.py  test_server.py  test_telemetry_writer.py  test_threshold.py  test_tracing.py
